syntax = "proto3";

package proto;

message Block {
    string prvHash = 1;
    string data = 2;
    string hash = 3;
}

message BlockRequest{
    string data = 1;
}

message BlockResponce{
    string hash = 1;
}

message ChainStreamResponse{
    Block block = 1;
}

message ChainRequest{}

message ChainResponce{
    repeated Block blocks = 1;
}

service BlockChain{
    rpc AddBlock(BlockRequest) returns (BlockResponce){}
    rpc StreamGetBlocks(ChainRequest) returns (stream ChainStreamResponse){}
    rpc GetChain(ChainRequest) returns (ChainResponce){}
}